<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroud_out"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_exit"
            android:textColor="#6c6c6c"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/shape_gray" />

        <Button
            android:id="@+id/btn_cofirm"
             android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/make_sure"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginLeft="40dp"
            android:background="@drawable/shape_register" />
        
    </LinearLayout>

</LinearLayout>