<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/foshan">

    <LinearLayout
            android:id="@+id/title_linear"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="75dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal">

        <ImageView
                android:id="@+id/imgIcon"
                android:background="@drawable/img_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:id="@+id/title_label"
                style="@style/titleFont"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/zrodoblue"
                android:text="@string/apptitle"
                android:layout_marginTop="2dip"
                />

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/login_info"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">

        <com.zrodo.fsclz.widget.ClearEditText
                android:id="@+id/user_info"
                android:singleLine="true"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingRight="10dp"
                android:hint="@string/str_input_acchint"
                android:background="@drawable/shape_white"
                android:drawableLeft="@drawable/name"
                android:drawableRight="@drawable/delete_selector"/>

        <com.zrodo.fsclz.widget.ClearEditText
                android:id="@+id/pass_info"
                android:singleLine="true"
                android:layout_below="@id/user_info"
                android:layout_marginTop="10dp"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingRight="10dp"
                android:hint="@string/str_input_pwd"
                android:password="true"
                android:background="@drawable/shape_white"
                android:drawableLeft="@drawable/password"
                android:drawableRight="@drawable/delete_selector"/>

        <Button
                android:id="@+id/login_btn"
                style="@style/btn_login_style"
                android:layout_below="@id/pass_info"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_btn"
                android:background="@drawable/shape_register"
                android:onClick="onClick"/>

    </RelativeLayout>



</LinearLayout>