<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E7F3F8"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/lin_personalinfo"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape_personalcenter_bg" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:background="@drawable/personal_head" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="24dp"
            android:layout_height="24sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/icon_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/imageView10"
            android:text="@string/str_personalinfo"
            android:textColor="#dddddd" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/shape_personalcenter_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/lin_change_password"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/img_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/per_pwd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img_pwd"
                android:text="@string/str_change_password"
                android:textColor="#dddddd" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/dotted_line" />

        <RelativeLayout
            android:id="@+id/lin_contact_us"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/img_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/per_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img_phone"
                android:text="@string/call_me"
                android:textColor="#dddddd" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/dotted_line" />

        <RelativeLayout
            android:id="@+id/lin_about_version"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/img_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/per_version" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img_version"
                android:text="@string/about_version"
                android:textColor="#dddddd" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCancellation"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_register"
        android:text="退出登录"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</LinearLayout>