<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E7F3F8"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/change_pwd_background_shape"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/str_old_password"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_old_password"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:background="@drawable/shape_update_pwd_edit_bg"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/dotted_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/str_new_password"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_new_password"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:background="@drawable/shape_update_pwd_edit_bg"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/dotted_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/str_confirm_new_password"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_comfirm_new_password"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:background="@drawable/shape_update_pwd_edit_bg"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/change_pwd_rounded_bottom_shape"
        android:text="提交"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>