<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E7F3F8"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/shape_personalcenter_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/lin_change_password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/customer_hotline"
                    android:textColor="#cccccc"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_hotline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:text="010-729-8899"
                    android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/dotted_line" />

        <RelativeLayout
            android:id="@+id/lin_contact_us"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <TextView
                    android:id="@+id/tvebizlink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_name"
                    android:textColor="#cccccc"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_forum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:text="@string/website"
                    android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/dotted_line" />

        <RelativeLayout
            android:id="@+id/lin_about_version"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center_vertical" >

             <TextView
                    android:id="@+id/tvebizforum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/forum"
                    android:textColor="#cccccc"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_housekeeper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:text="bbs.fsclz.com"
                    android:textSize="18sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/dotted_line" />
        
        
        <RelativeLayout
            android:id="@+id/lin_about_version"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center_vertical" >

           <TextView
                    android:id="@+id/tvebizvchat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/public_number"
                    android:textColor="#cccccc"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_public_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:text="fsclz"
                    android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
<!-- 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/version_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/img_icon"/>

        <TextView
            android:id="@+id/txt_version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/version_iv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="#666666"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/lin_version"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/customer_hotline"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_hotline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:text="010-729-8899"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_feature"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvebizlink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_name"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_forum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:text="@string/website"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_help"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvebizforum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/forum"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_housekeeper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:text="bbs.fsclz.com"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_jubao"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvebizvchat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/public_number"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_public_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:text="fsclz"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout> -->